--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 #Github.com-Vasusen-code
 
-https://github.com/vasusen-code/Telethon/archive/refs/tags/v1.24.0.zip
-ethon==69.2
+https://github.com/LonamiWebs/Telethon/releases/tag/v1.27.0
+ethon
 cryptg
 tgcrypto
 pyrogram==1.4.16
